--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.kitchenbuddy">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_my"
@@ -17,6 +19,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".LoginActivity">
+
+        </activity>
+        <activity android:name=".HomeActivity">
 
         </activity>
     </application>
