deseti-rating write

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
     <application
         android:allowBackup="true"
         android:configChanges="orientation|keyboardHidden|screenSize"
-        android:icon="@mipmap/ic_launcher_my"
+        android:icon="@mipmap/ic_launcher2_my_circle_foreground"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_my_round"
+        android:roundIcon="@mipmap/ic_launcher2_my_circle_foreground"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
